bk_ida/gccida/c1/add_fde_cfi
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_fde_cfi/src/dwarf2out.c:1035:6: error: use of undeclared identifier 'dwarf2out_cfi_label_label'; did you mean 'dwarf2out_cfi_label'?
v3 = dwarf2out_cfi_label_label; 
     ^~~~~~~~~~~~~~~~~~~~~~~~~
     dwarf2out_cfi_label
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_fde_cfi/src/dwarf2out.c:540:1: note: 'dwarf2out_cfi_label' declared here
dwarf2out_cfi_label ()
^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/add_fde_cfi/src/obj/dwarf2out.o] Error 1
